fixed css issues causing the page to be to large on mobile browsers

--- a/css/edit.css
+++ b/css/edit.css
@@ -3,11 +3,16 @@
     font-family: 'Roboto', sans-serif;
 }
 
+html {
+    height: 100%;
+}
+
 body {
     display: flex;
     flex-direction: column;
     margin: 0px;
     overflow: hidden;
+    height: 100%;
 }
 
 #top {
